--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ html{
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
+    box-shadow: 0 0 20px aqua;
 }
 .titlediv{
     color: ghostwhite;
@@ -34,15 +35,20 @@ html{
 }
 
 .pdgen_title{
+    text-align: center;
     font-size: 3.5rem;
     margin-bottom: 10px;
+    pointer-events: none;
+    caret-color: transparent;
 }
 
 .pdgen_para{
     font-size: 1.75rem;
+    pointer-events: none;
+    caret-color: transparent;
 }
 
-span{
+.deco{
     color: aqua;
     text-decoration: underline;
 }
@@ -63,6 +69,7 @@ span{
     background-color: azure;
     font-size: 1rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .lenbox{
@@ -73,6 +80,7 @@ span{
     background-color: azure;
     font-size: 1rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .genbtn{
@@ -81,6 +89,7 @@ span{
     background-color: rgb(0, 255, 255);
     font-size: 1rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .genbox{
@@ -98,6 +107,7 @@ span{
     background-color: rgb(0, 255, 255);
     font-size: 1rem;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .encbox{
@@ -111,15 +121,17 @@ span{
 
 .value{
     font-size: 1.35rem;
+    pointer-events: none;
+    caret-color: transparent;
 }
 
 .sign{
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: 50px;
     font-size: 1rem;
     color: azure;
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.075);
     border-radius: 25px;
     padding: 25px;
     margin-bottom: 30px;
@@ -130,4 +142,25 @@ span{
     font-size: 1.25rem;
     color: aqua;
     
+}
+
+.pdstrchk{
+    display: flex;
+    color: ghostwhite;
+    align-items: center;
+    text-align: center;
+    padding: 20px 190px 20px 170px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 20px aqua;
+}
+
+.pdstrchk_btn{
+    padding: 7px 10px 7px 10px;
+    border-radius: 10px;
+    background-color: rgb(0, 255, 255);
+    font-size: 1rem;
+    font-weight: 600;
+    cursor: pointer;
 }
